--- a/maltrail.conf
+++ b/maltrail.conf
@@ -56,7 +56,7 @@ DISABLE_CPU_AFFINITY false
 USE_FEED_UPDATES true
 
 # Disable (retrieval from) specified feeds (Note: respective .py files inside /trails/feeds; turris and ciarmy/cinsscore seem to be too "noisy" lately; policeman is old and produces lots of false positives)
-DISABLED_FEEDS turris, ciarmy, policeman, myip
+DISABLED_FEEDS turris, ciarmy, policeman, myip, alienvault
 
 # Disable trails based on the following regular expression run against the corresponding info
 #DISABLED_TRAILS_INFO_REGEX known attacker|tor exit node
